--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@jscad/io": "^2.2.6",
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "dxf-parser": "^1.1.2",
+    "file-saver": "^2.0.5",
+    "makerjs": "^0.17.1",
+    "three": "^0.139.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
